Tags , Genres to Database on post creation/get post
