# MusicAPI/src/model/PostModel.ts
@@ -2,7 +2,7 @@ export interface ICreatePostRequest{
     post_title:string;
     post_description:string;
     post_tags?: string[];
-    post_audio_genre: string[];
+    post_audio_genres: string[];
     username: string;
 }
 
@@ -14,5 +14,18 @@ export interface IPostResponse{
     post_image_url: string;
     post_likes_count: number;
     post_comments_count: number;
+    post_tags?: string[];
+    post_audio_genres: string[];
+}
 
+export interface IPostQuery{
+    post_title: string;
+    post_description: string;
+    post_id: number;
+    post_audio_url: string;
+    post_image_url: string;
+    post_likes_count: number;
+    post_comments_count: number;
+    post_tags?: string;
+    post_audio_genres: string;
 }
